Missing align the name and the price, but it's correct

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif, 'Inter';
   line-height: 1.5;
   font-weight: 400;
   height: 100%;
@@ -22,6 +23,7 @@ html, body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  font-family: 'Inter';
 }
 
 button {
